--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,6 +4,8 @@
     <title>Profile page</title>
 </head>
 <body>
+    <%-include('common/header') %>  
+    
     <h1>Welcome, <%=data.name%></h1>      
     <label> <%=data.mobile%></label>      
 
